# 95-pacbio-methylation-hmm

./: CMakeLists.txt  README.md  neural_demo_out.txt  setup.py  test_hmm.py  test_hmm_torch.py  test_long_read_stress.py  test_neural_arch.py  test_neural_hmm.py  test_neural_out.txt  test_neural_result.txt
checkpoints/: neural_hmm_epoch1.pt  neural_hmm_epoch10.pt  neural_hmm_epoch11.pt  neural_hmm_epoch13.pt  neural_hmm_epoch14.pt  neural_hmm_epoch2.pt  neural_hmm_epoch3.pt  neural_hmm_epoch4.pt  neural_hmm_epoch5.pt  neural_hmm_epoch6.pt  neural_hmm_epoch7.pt  neural_hmm_epoch8.pt  neural_hmm_epoch9.pt
cpp/: CMakeLists.txt
cpp/include/: bam_parser.h  base_modification_extractor.h  cigar_processor.h
cpp/src/: bam_parser.cpp  base_modification_extractor.cpp  cigar_processor.cpp  python_bindings.cpp
examples/: analyze_bam.py  demo_neural_hmm.py  demo_synthetic.py
python/pacbio_methylation_hmm/: __init__.py  bam_reader.py  hmm.py  hmm_numpy.py  hmm_torch.py  neural_emission.py  neural_hmm.py  pipeline.py  trainer.py
